--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,10 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  flutter_redux: ">=0.6.0"
   flutter:
     sdk: flutter
 
